<?xml version="1.0"?>
<package format="2">
  <name>cheyou_ego_vehicle</name>
  <version>0.0.0</version>
  <description>The CheYou_ego_vehicle package</description>
  <maintainer email="info@co-driver.ai">CheYou Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
